--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
+  "homepage":"https://maciejwszolek.github.io/site-react-/",
   "name": "projekt2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "create-react-app": "^4.0.3",
-    "gh-pages": "^3.2.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
@@ -27,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
